--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "use-sound": "^5.0.0",
+    "vconsole": "^3.15.1"
   },
   "devDependencies": {
     "@capacitor/preferences": "^8.0.0",
